# minicfg

./: README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: pypi.yml
examples/: attach_file_field.py  docs.py  file_field.py  nesting.py  prefixes.py  provider.py  simple.py
minicfg/: __init__.py  __main__.py  caster.py  docs_generator.py  exceptions.py  field.py  minicfg.py  provider.py
tests/: _mock_provider.py  test_caster.py  test_field.py  test_minicfg.py  test_provider.py
